# ProjetoTCC

./: README.md  angular.json  anotacao.rb  package-lock.json  package.json
back-end/: main.py  pyproject.toml
back-end/src/projeto_tcc_api/: dependencias.py
back-end/src/projeto_tcc_api/api/v1/: agendamentos_controller.py  paciente_controller.py
back-end/src/projeto_tcc_api/database/: banco_dados.py  modelos.py
back-end/src/projeto_tcc_api/schemas/: agendamentos_schemas.py  paciente_schemas.py
front-end/: angular.json  anotacao.rb  package-lock.json  package.json  tsconfig.app.json
front-end/src/: app.config.ts  app.routes.ts  index.html
front-end/src/app/models/: paciente.ts
front-end/src/app/pages/: pages.routes.ts
front-end/src/assets/dados/: alergias.json
front-end/src/environments/: environment.ts
src/: app.component.spec.ts  app.component.ts  app.routes.ts  index.html  main.ts  styles.scss
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts
src/app/components/cadastro/: cadastro.component.html  cadastro.component.ts
src/app/components/integracao/: integracao.component.ts
src/app/components/monitoramento/: monitoramento.component.ts
src/app/layout/component/: app.layout.ts  app.navbar.ts  app.topbar.ts
src/app/layout/footer/: footer.component.ts
src/app/layout/header/: header.component.html  header.component.scss  header.component.ts
src/app/layout/layout/: layout.component.html  layout.component.scss  layout.component.ts
src/app/services/: prontuario.service.ts
(+41 files in other folders)
